--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=e-school-service-user-oauth2-rbac
 server.port=8082
+
 #JPA配置
 spring.datasource.driver-class-name=${SERVICE_DATASOURCE_DRIVER:org.h2.Driver}
-spring.datasource.url=${SERVICE_DATASOURCE_URL:jdbc:h2:mem:demo}
+spring.datasource.url=${SERVICE_DATASOURCE_URL:jdbc:h2:mem:userService;MODE=MySQL}
 spring.datasource.username=${SERVICE_DATASOURCE_USERNAME:sa}
 spring.datasource.password=${SERVICE_DATASOURCE_PASSWORD:123123}
 spring.datasource.hikari.maximum-pool-size=30
@@ -16,6 +17,7 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 #spring.datasource.username=demo
 #spring.datasource.password=123123
+
 # data-jpa config
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
@@ -28,16 +30,24 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
 spring.jpa.properties.hibernate.hibernate.auto_quote_keyword=true
+#spring.jpa.properties.hibernate.dialect=${SERVICE_DATASOURCE_DIALECT:org.hibernate.dialect.H2Dialect}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 # batch_size默认为org.hibernate.dialect.DEFAULT_BATCH_SIZE=15
 spring.jpa.properties.hibernate.jdbc.batch_size=5000
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
-#项目启动执行SQL
-#spring.datasource.schema=classpath:schema-init.sql
-#spring.datasource.data=classpath:data-init.sql
-#spring.datasource.initialization-mode=ALWAYS
+
+# 项目启动执行SQL
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:data.sql
+spring.datasource.initialization-mode=ALWAYS
+
+# h2 console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.path=/h2
 
 #consul
 spring.cloud.consul.host=localhost
